--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, max-age=0">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <title>Nicholaus Marsden</title>
+  <title>Nicholaus A Marsden</title>
 </head>
 <body>
   <div id="root"></div>
